--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package>
-  <name>reemc_door</name>
+  <name>eurobench_reemc_door</name>
   <version>1.0.0</version>
   <description>Simulation files for the E10 - Open the door on the 1st SciRoc Challenge.</description>
   <maintainer email="josevicentejaramillo@gmail.com">Jose V. Jaramillo</maintainer>
