--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -4,6 +4,7 @@ find_package(roscpp REQUIRED)
 find_package(std_msgs REQUIRED)
 include_directories(${roscpp_INCLUDE_DIRS})
 include_directories(${std_msgs_INCLUDE_DIRS})
+#include_directories(${madrob_INCLUDE_DIRS})
 
 
 find_package(gazebo REQUIRED)
