--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -5,7 +5,7 @@ find_package(std_msgs REQUIRED)
 find_package(eurobench_bms_msgs_and_srvs REQUIRED)
 include_directories(${roscpp_INCLUDE_DIRS})
 include_directories(${std_msgs_INCLUDE_DIRS})
-
+include_directories(${eurobench_bms_msgs_and_srvs_INCLUDE_DIRS})
 
 find_package(gazebo REQUIRED)
 include_directories(${GAZEBO_INCLUDE_DIRS})
